--- a/src/content/graphos/basics/graphs/federated-graphs.mdx
+++ b/src/content/graphos/basics/graphs/federated-graphs.mdx
@@ -47,13 +47,7 @@ This method of adding a variant is available only to cloud supergraphs. For othe
 
 </Note>
 
-1. Go to your supergraph's **Settings** page in Studio and navigate to **This Graph > Variants**:
-
-   <img
-     src="../../img/federated-graphs/variant-settings.jpg"
-     class="screenshot"
-     alt="Variant settings page in Studio"
-   />
+1. Go to your supergraph's **Settings** page in Studio and navigate to **This Graph > Variants**.
 
 2. Click **Add a variant**.
 
@@ -101,14 +95,7 @@ This method of adding a subgraph is available only to cloud supergraphs. For oth
 
 </Note>
 
-1. Go to your variant's **Subgraphs** page in Studio:
-
-   <img
-     src="../../img/federated-graphs/subgraphs-page.jpg"
-     class="screenshot"
-     alt="Variant subgraphs page in Studio"
-     width="550"
-   />
+1. Go to your variant's **Subgraphs** page in Studio.
 
 2. Click **Add a subgraph**.
 
