--- a/src/content/graphos/basics/graphs/studio-features.mdx
+++ b/src/content/graphos/basics/graphs/studio-features.mdx
@@ -61,9 +61,7 @@ You can define a GraphQL code block with the following syntax:
     }
     ```
 
-This renders the code block with buttons to copy an operation or open it in the Explorer:
-
-<img className="screenshot" alt="GraphQL codeblock in README" src="../../img/readme-codeblock.jpg" width="300" />
+This renders the code block with buttons to copy an operation or open it in the [Explorer](../explorer).
 
 ### README shortcodes
 
@@ -268,26 +266,6 @@ It can help clarify your understanding of your schema's design, so you can more 
   className="screenshot"
   alt="Schema visualization in Studio"
 />
-
-Use the buttons on the bottom of the page to:
-- Zoom in and out of the visualization
-- Copy a link to the visualization to share with organization members
-- Download an SVG or PNG of the visualization
-- Open and close the visualization **Legend**
-
-On the top of the page, you can:
-- Click the double arrow to collapse or expand a searchable list of **Types**.
-- Click **Show Filters** to filter your visualization by root type, subgraph, or tag.
-- Click the **Highlight** dropdown to select particular types, tags, or directives to highlight.
-  - Highlighting **Unused** types, **Errors**, **Usage**, or **Latency**, the visualization displays a heatmap whose **Time range** you can adjust in the bottom right of the screen.
-
-    <img
-      src="../../img/schema-visualization-heatmap.png"
-      className="screenshot"
-      alt="Visualization heatmap showing unused types and fields in a schema visualization"
-    />
-
-- Click **More** to **Collapse all fields** or **Hide** particular fields, types, and nodes.
 
 ## The Explorer
 
