--- a/src/content/graphos/explorer/index.mdx
+++ b/src/content/graphos/explorer/index.mdx
@@ -17,13 +17,7 @@ The Explorer is also available in a [sandbox mode](./sandbox/) that doesn't requ
 
 ## Setup
 
-To get started with the Explorer, [create a graph](../quickstart/cloud/#2-create-your-first-supergraph) in GraphOS Studio and then navigate to that graph's Explorer page:
-
-<img
-  src="../img/explorer-new-graph.jpg"
-  className="screenshot"
-  alt="The default Explorer view for a new supergraph"
-/>
+To get started with the Explorer, [create a graph](../quickstart/cloud/#2-create-your-first-supergraph) in GraphOS Studio and then navigate to that graph's **Explorer** page from the left navigation.
 
 ## Building a query
 
