--- a/src/content/graphos/metrics/datadog-integration.mdx
+++ b/src/content/graphos/metrics/datadog-integration.mdx
@@ -53,14 +53,7 @@ To integrate Apollo with Datadog, you provide your Datadog API key and region to
    - If the domain name is `app.datadoghq.com`, then your API region is `US`.
    - If the domain name is `app.datadoghq.eu`, then your API region is `EU`.
 
-4. In GraphOS Studio, go to your graph's Settings page, then go to **This Graph > Reporting**:
-
-   <img
-     src="../img/datadog/datadog-studio-settings.jpg"
-     alt="Graph settings page in Studio with Datadog section"
-     class="screenshot"
-     width="600"
-   />
+4. In GraphOS Studio, go to your graph's Settings page, then go to **This Graph > Reporting**.
 
    <Note>
 
