--- a/src/content/graphos/metrics/notifications/notification-setup.mdx
+++ b/src/content/graphos/metrics/notifications/notification-setup.mdx
@@ -36,13 +36,7 @@ For performance alerts, see [Performance alerts setup](./performance-alerts/#set
 
 1. Go to your graph's Settings page in [GraphOS Studio](https://studio.apollographql.com/?referrer=docs-content).
 2. Select the **Reporting** tab.
-3. Click **Add notification** in the upper right:
-   <img
-     src="../../img/add-new-alert.jpg"
-     class="screenshot"
-     width="500"
-     alt="Add new alert button"
-   />
+3. Click **Add notification** in the upper right.
 4. Select a notification type, either **Daily Report**, **Schema Change**, or **Build Status** and click **Next**:
 5. In the dropdown, select which [variant](../../graphs/#variants) of your graph you want to receive notifications for.
 6. Select an existing configured channel to send notifications to, or select which [type of new channel](#supported-notifications-and-channels) you want to configure.
