--- a/src/content/shared/create-self-hosted-supergraph.mdx
+++ b/src/content/shared/create-self-hosted-supergraph.mdx
@@ -1,15 +1,8 @@
 1. Go to your organization's **Graphs** tab in [GraphOS Studio](https://studio.apollographql.com/?referrer=docs-content).
 
-2. Click **Create New Graph** in the top right. Studio displays the following dialog:
+2. Click **Create New Graph** in the top right.
 
-<img
-  className="screenshot"
-  src="../graphos/img/graph-creation.jpg"
-  width="350"
-  style="margin-bottom: 20px;"
-/>
-
-3. Specify an **Organization** and **Graph title** for your graph.
+3. In the dialog that appears, specify an **Organization** and **Graph title** for your graph.
 
 4. Leave the **Graph Architecture** as **Supergraph (Default)**.
 
