--- a/src/content/graphos/basics/quickstart/cloud.mdx
+++ b/src/content/graphos/basics/quickstart/cloud.mdx
@@ -71,14 +71,7 @@ Otherwise, continue with the steps below.
 
 1. Studio prompts you to **Connect your API** or **Try a demo graph**. If you have the URL of your running GraphQL server, select **Connect API**. Otherwise, you can select **Try a demo graph**, and Apollo creates a demo graph for you to play with.
 
-2. Provide your **GraphQL API's Endpoint URL**. This is the same URL that client applications currently use to query your API. After you provide the URL, Studio attempts to fetch your API's schema from it via introspection. The result of that fetch is shown beneath the text box:
-
-   <img
-     src="../../img/supergraph-schema-fetch.jpg"
-     class="screenshot"
-     alt="Displayed result of API schema fetch"
-     width="500"
-   />
+2. Provide your **GraphQL API's Endpoint URL**. This is the same URL that client applications currently use to query your API. After you provide the URL, Studio attempts to fetch your API's schema from it via introspection. The result of that fetch is shown beneath the text box.
 
    - If your GraphQL server requires certain HTTP headers for Studio to introspect it, click **Provide HTTP Headers** to specify them.
 
@@ -116,29 +109,13 @@ Skip to [the next step](#3-learn-about-your-variant) to learn about **variants**
 ### From an existing account
 
 1. From your account in [GraphOS Studio](https://studio.apollographql.com/?referrer=docs-content), navigate to the **Graphs** tab if it isn't already open. Select **+ Create New Graph** in the top right.
-
-<img
-  src="../../img/supergraph-list.jpg"
-  className="screenshot"
-  alt="An organization's list of cloud supergraphs"
-  width="700"
-/>
-
 2. Click **Connect your GraphQL API**.
-
 3. In the dialog that appears, provide your GraphQL API's **Endpoint URL**.
 
    - This is the same URL that client applications currently use to query your API.
    - If you don't have a URL, you can use `https://flyby-locations-sub.herokuapp.com/` as an example.
 
    After you provide the URL, Studio attempts to fetch your API's schema from it via introspection. Once the fetch succeeds, the input shows a green check.
-
-   <img
-     src="../../img/supergraph-schema-fetch-existing.jpg"
-     class="screenshot"
-     alt="Displayed result of API schema fetch"
-     width="400"
-   />
 
 4. (Optional) You can click **Advanced options** for the following scenarios:
 
@@ -323,13 +300,7 @@ Make sure you save any [router-specific secrets](#creating-secrets) before you u
 
 Let's try executing a query against your new supergraph! To do that, we'll use one of Studio's most powerful features: the Explorer. The Explorer is a GraphQL IDE that provides visibility into your supergraph's entire schema and helps you build and run queries against it.
 
-From your organization's **Graphs** tab, select your new variant and then open its Explorer page from the left navigation. The Explorer looks like this:
-
-<img
-  src="../../img/explorer-new-graph.jpg"
-  className="screenshot"
-  alt="The default Explorer view for a new supergraph"
-/>
+From your organization's **Graphs** tab, select your new variant and then open its **Explorer** page from the left navigation.
 
 Try building a couple of queries and running them against your supergraph. Notice that the supergraph supports the exact same query structures as your underlying GraphQL API.
 
@@ -378,7 +349,7 @@ Similarly, any new client applications should use your router's URL.
 
 </Note>
 
-Your router's URL is available from the top of your variant's README page:
+Your router's URL is available from the top of your variant's **README** page, directly below the variant's graph ref.
 
 <img
   src="../../img/router-url.jpg"
@@ -386,8 +357,6 @@ Your router's URL is available from the top of your variant's README page:
   alt="Router URL shown on the README page"
   width="500"
 />
-
-Every router URL is on a subdomain of `apollographos.net`.
 
 ## Next steps
 
