--- a/src/content/graphos/cloud-routing/dedicated/lattice-troubleshooting.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/lattice-troubleshooting.mdx
@@ -15,14 +15,7 @@ To help resolve AWS VPC Lattice connection issues, we recommend enabling subgrap
 1. Go to [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content).
 
 2. Open the **Cloud Router** page from the left navigation.
-3. Open the **Configuration** tab:
-
-<img
-  className="screenshot"
-  alt="The Cloud Router page in GraphOS Studio"
-  src="../../img/cloud-dedicated/cloud-router-configuration.png"
-/>
-
+3. Open the **Configuration** tab.
 4. In **Router configuration YAML**, ensure that the following configuration block that sets `include_subgraph_errors` is present:
 
 ```yaml
