--- a/src/content/graphos/delivery/schema-linter.mdx
+++ b/src/content/graphos/delivery/schema-linter.mdx
@@ -45,16 +45,7 @@ If you view this configuration for a single variant, each category displays a **
 
 ### Setting severity levels
 
-The **Rules Severity Configuration** category of your linter configuration displays all predefined rules and the current **severity** level for each:
-
-<img
-    src="../img/linter-rules-list.jpg"
-    class="screenshot"
-    alt="Linter configuration page in GraphOS Studio"
-    width="500"
-/>
-
-Click a rule's severity to set it to any of the following:
+The **Rules Severity Configuration** category of your linter configuration displays all predefined rules and the current **severity** level for each. Click a rule's severity to set it to any of the following:
 
 - **Error**: Any violation of this rule causes the associated linter check to fail.
     - This in turn causes the entire schema checks run to fail, which is useful for failing builds in CI.
@@ -69,7 +60,8 @@ Schema linting runs automatically as part of your graph's [schema checks](#linti
 
 ### Linting via schema checks
 
-If you set up [schema checks](./schema-checks) for your graph, schema linting automatically runs as a separate check type alongside build and operation checks. You can view the results of all check types from your graph's **Checks** page in Studio:
+If you set up [schema checks](./schema-checks) for your graph, schema linting automatically runs as a separate check type alongside build and operation checks. You can view the results of all check types from your graph's **Checks** page in Studio.
+For example, the screenshot below shows successful build and operations checks with a failed linting check.
 
 <img
     src="../img/linter-check-results.jpg"
