--- a/src/content/graphos/metrics/notifications/performance-alerts.mdx
+++ b/src/content/graphos/metrics/notifications/performance-alerts.mdx
@@ -37,15 +37,7 @@ Each performance alert you define can apply to either a specific operation or an
 
 1. Go to your graph's Settings page in [GraphOS Studio](https://studio.apollographql.com/?referrer=docs-content).
 2. Select the **Reporting** tab.
-3. Find the Performance Alerts card and click **Add a new alert**.
-
-<img
-  src="../../img/add-new-alert.jpg"
-  className="screenshot"
-  width="500"
-  alt="Add new alert button"
-/>
-
+3. Find the **Performance Alerts** card and click **Add a new alert**.
 4. Configure the alert's **Operation Name**, **Trigger**, and **Trigger Value** to suit your needs.
 5. Select a **Channel** to send alerts to. You can select **New Channel** from the dropdown if you haven't yet configured the Slack channel or PagerDuty instance you want to use.
 6. Click **Create**.
