Add back padding

--- a/src/content/shared/graphos-enteprise-required.mdx
+++ b/src/content/shared/graphos-enteprise-required.mdx
@@ -8,7 +8,7 @@ import {EnterpriseIcon} from '../../components/Icons';
     borderColor="primary"
     sx={{
     '>': {
-        ':not(:last-child)': {
+        ':not(a):not(:last-child)': {
         mb: 2
         }
     }
