--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -61,14 +61,21 @@ Apollo makes GraphQL work for you at any stage and any scale, whether you're jus
 
 ## For API developers
 
-<Docset
-  icon={<NodeJsIcon />}
-  title="Node.js"
-  description="Build a production-ready API that handles multiple data sources with Apollo Server."
-  path="/apollo-server"
-  cta="Explore Apollo Server docs"
-/>
 <DocsetGrid>
+  <Docset
+    icon={<NodeJsIcon />}
+    title="Node.js"
+    description="Build a production-ready API that handles multiple data sources with Apollo Server."
+    path="/apollo-server"
+    cta="Explore Apollo Server docs"
+  />
+  <Docset
+    icon={<NodeJsIcon />}
+    title="Typescript"
+    description="Explore a tutorial on implementing a GraphQL API with TypeScript and Apollo Server."
+    path="https://www.apollographql.com/tutorials/intro-typescript"
+    cta="Begin tutorial"
+  />
   <Docset
     icon={<JavaIcon />}
     title="Java"
