--- a/src/content/graphos/basics/graphs/index.mdx
+++ b/src/content/graphos/basics/graphs/index.mdx
@@ -148,7 +148,7 @@ Even if your API currently uses only one GraphQL server, a cloud supergraph help
 
 <p>
   <ButtonLink
-    href="/../quickstart/cloud/"
+    href="/graphos/quickstart/cloud/"
     style={{
       marginRight: '10px'
     }}
