--- a/src/content/graphos/basics/quickstart/cloud.mdx
+++ b/src/content/graphos/basics/quickstart/cloud.mdx
@@ -26,7 +26,7 @@ GraphOS Studio is the primary web interface for interacting with the GraphOS pla
 <Note>
 
 If you already have an Apollo account, you can skip to [creating your first supergraph](#2-create-your-first-supergraph).
-If your account is part of an organization created before October 2022, you might need to [create a new organization](../../org/#creating-an-organization) to create cloud supergraphs.
+If your account is part of an organization created before October 2022, you might need to [create a new organization](../org/#creating-an-organization) to create cloud supergraphs.
 
 Some legacy organizations can upgrade to a current plan. [See details.](../org/plans#upgrading-to-a-current-plan)
 
