--- a/src/content/graphos/cloud-routing/dedicated/quickstart.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/quickstart.mdx
@@ -17,7 +17,7 @@ To complete this quickstart, you must have the following:
 - An organization with the Dedicated plan—<TrackableLink href="https://www.apollographql.com/contact-sales?referrer=docs" eventName="content_contact_sales">get in touch</TrackableLink> to request access.
 - One or more GraphQL APIs that Apollo can access. That means you must either:
   - Make your GraphQL API(s) available via a publicly accessible URL, for example, `https://api.mycompany.com/subgraphA`
-  - Keep your GraphQL API(s) private but allow secure connections, for example, via [VPC networking](https://docs.aws.amazon.com/vpc/latest/peering/what-is-vpc-peering.html/)
+  - Keep your GraphQL API(s) private but allow secure connections, for example, via [VPC networking](https://docs.aws.amazon.com/vpc/latest/peering/what-is-vpc-peering.html)
 
 If you have multiple subgraphs, each needs to be exposed to Apollo. Your supergraph, however, should only be publicly accessible via your cloud router.
 
@@ -44,7 +44,7 @@ To provision a new Dedicated cloud router, you must first create a new graph in 
 1. Next, connect your GraphQL API to Apollo.
 
    - If your API URL is publicly accessible, enter the API URL. This URL is the URL that client applications currently use to query your API.
-   - If your API isn't publicly accessible and requires private networking, you can connect to it with [AWS VPC Lattice](../lattice). Select **My endpoint isn't publicly accessible** to connect a VPC. Follow the prompts to complete private subgraph setup.
+   - If your API isn't publicly accessible and requires private networking, you can connect to it with [AWS VPC Lattice](./lattice). Select **My endpoint isn't publicly accessible** to connect a VPC. Follow the prompts to complete private subgraph setup.
 
 2. Enter a **Subgraph name**. The name should reflect your API's data or capabilities and uniquely identify your API among any other APIs you might add to the supergraph later.
 
