Use temporary typescript icon

--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -20,6 +20,7 @@ import {
   NodeJsIcon,
   RocketIcon,
   TwitterIcon,
+  TypescriptIcon,
   YoutubeIcon
 } from '../../components/Icons';
 import {ButtonGroup, VStack} from '@chakra-ui/react';
@@ -70,8 +71,8 @@ Apollo makes GraphQL work for you at any stage and any scale, whether you're jus
     cta="Explore Apollo Server docs"
   />
   <Docset
-    icon={<NodeJsIcon />}
-    title="Typescript"
+    icon={<TypescriptIcon />}
+    title="TypeScript"
     description="Explore a tutorial on implementing a GraphQL API with TypeScript and Apollo Server."
     path="https://www.apollographql.com/tutorials/intro-typescript"
     cta="Begin tutorial"
