Add email notifs to schema proposals overview

--- a/src/content/graphos/delivery/schema-proposals/index.mdx
+++ b/src/content/graphos/delivery/schema-proposals/index.mdx
@@ -158,7 +158,7 @@ graph TB
 
 ## Next steps
 
-Schema proposal default configurations let you start using proposals out of the box. If you want to fine-tune your graph's proposal process, check out [Configure proposals](./configuration). Configurations include permissions, approval requirements, and more.
+Schema proposal default configurations let you start using proposals out of the box. If you want to fine-tune your graph's proposal process, check out [Configure proposals](./configuration). Configurations include permissions, approval requirements, email notifications, and more.
 
 To learn more about each stage in the process, refer to the following articles:
 
