Document override role

--- a/src/content/graphos/delivery/schema-checks.mdx
+++ b/src/content/graphos/delivery/schema-checks.mdx
@@ -180,6 +180,12 @@ In cases like this, you can override a flagged change in GraphOS Studio from the
   width="500"
 />
 
+<Note>
+
+Only [**Org admins** and **Graph admins**](../org/members) can override checks.
+
+</Note>
+
 You override flagged changes on an operation-by-operation basis. For each operation with flagged changes, you can override those changes in the following ways:
 
 - **Mark the changes as safe.** In this case, schema checks will not flag these exact changes for the operation in any future execution. This effectively "approves" the changes for the operation.
