--- a/src/content/graphos/delivery/linter-rules.mdx
+++ b/src/content/graphos/delivery/linter-rules.mdx
@@ -719,3 +719,7 @@ type Product {
 >
 
 </RuleExpansionPanel>
+
+## Custom rules
+
+The GraphOS linter is configurable with a predefined set of rules. Custom rules or engines are not supported today however, you can subscribe to schema updates with [GraphOS Notifications](/graphos/metrics/notifications/notification-setup). If you have suggestions for a new rule you would like added please reach out in the following channel: TODO
