--- a/src/content/graphos/delivery/linter-rules.mdx
+++ b/src/content/graphos/delivery/linter-rules.mdx
@@ -722,4 +722,5 @@ type Product {
 
 ## Custom rules
 
-The GraphOS linter is configurable with a predefined set of rules. Custom rules or engines are not supported today. If you have suggestions for a new rule you would like added please reach out in the following channel: TODO
+The schema linter is [configurable](./schema-linter#linter-configuration) with the predefined rules documented above.
+Custom rule creation isn't currently supported but is under consideration.
