--- a/src/content/graphos/delivery/schema-linter.mdx
+++ b/src/content/graphos/delivery/schema-linter.mdx
@@ -36,7 +36,7 @@ To navigate to your linter configuration:
 This page organizes linter options into the following categories:
 
 - **General Linter Configuration** provides high-level options, including disabling the linter entirely.
-- **Approved @tag names** enables you to specify approved values for the `name` argument of the `@tag` directive. This directive is used most commonly with [GraphOS contracts](./contracts/).
+- **Approved `@tag` names** enables you to specify approved values for the `name` argument of the `@tag` directive. This directive is used most commonly with [GraphOS contracts](./contracts/).
   - If you don't use the `@tag` directive, you can ignore this category.
   - Using a non-approved value for `name` raises the [`TAG_DIRECTIVE_USES_UNKNOWN_NAME`](./linter-rules#tag_directive_uses_unknown_name) violation.
 - **Rule Severity Configuration** enables you to [set the severity level](#setting-severity-levels) for violations of each rule.
