Update linter-rules docs about custom rules (#822)
* Update linter-rules.mdx

* Update linter-rules.mdx

Notifications don't allow adding custom checks

* Copyedit

---------

Co-authored-by: Maria Elisabeth Schreiber <maria.schreiber@apollographql.com>

--- a/src/content/graphos/delivery/linter-rules.mdx
+++ b/src/content/graphos/delivery/linter-rules.mdx
@@ -719,3 +719,8 @@ type Product {
 >
 
 </RuleExpansionPanel>
+
+## Custom rules
+
+The schema linter is [configurable](./schema-linter#linter-configuration) with the predefined rules documented above.
+Custom rule creation isn't currently supported but is under consideration.
