--- a/src/content/graphos/org/sso/multi-org.mdx
+++ b/src/content/graphos/org/sso/multi-org.mdx
@@ -3,13 +3,12 @@ title: Multi-organization SSO
 subtitle: Share SSO configurations between organizations
 ---
 
-<EnterpriseFeature>
+<PremiumFeature>
 
-Single sign-on (SSO) is available only for [Enterprise plans](https://www.apollographql.com/pricing/).
+Single sign-on (SSO) is available only for [Dedicated and Enterprise plans](https://www.apollographql.com/pricing#security).
+This feature is not available as part of an [Enterprise trial](../plans/#enterprise-trials).
 
-Unlike most Enterprise features, this feature isn't available as part of an Enterprise trial.
-
-</EnterpriseFeature>
+</PremiumFeature>
 
 <PreviewFeature>
 
@@ -18,7 +17,7 @@ This feature is in invite-only [preview](/resources/product-launch-stages#previe
 </PreviewFeature>
 
 GraphOS organizations can share the same SSO configuration so that members can switch between them in GraphOS Studio without having to reauthenticate.
-To share SSO configurations, organizations must first configure [self-serve SSO](./self-serve).
+To share SSO configurations, organizations must first configure [self-serve SSO](./setup).
 
 ## Switching between organizations
 
