--- a/src/content/graphos/org/sso/multi-org.mdx
+++ b/src/content/graphos/org/sso/multi-org.mdx
@@ -16,7 +16,7 @@ This feature is in invite-only [preview](/resources/product-launch-stages#previe
 
 </PreviewFeature>
 
-GraphOS organizations can share the same identity provider (IdP) and SSO so members can switch between organizations in GraphOS Studio without reauthenticating.
+Different GraphOS organizations can share the same identity provider (IdP) and SSO so members can switch between organizations in GraphOS Studio without reauthenticating.
 
 ## Prerequisites
 
@@ -49,7 +49,7 @@ Apollo recommends application portals as the most direct way for organization me
 
 </Tip>
 
-Many IdPs provide a user-facing page where you can see which applications you are assigned to. Different GraphOS organizations appear as separate applications and you can log in to each one by clicking the organization tile.
+Many IdPs provide a user-facing page where you can see which applications you are assigned to. Different GraphOS organizations appear as separate applications, and you can log in to each one by clicking the organization tile.
 
 <img
   src="../../img/sso/okta-application-portal.jpg"
@@ -58,17 +58,17 @@ Many IdPs provide a user-facing page where you can see which applications you ar
   className="screenshot"
 />
 
-For example, the screenshot above shows separate application tiles for the **Apollo GraphOS (Organization 1)** and **Apollo GraphOS (Organization 2)**.
+For example, the screenshot above shows separate application tiles for **Apollo GraphOS (Organization 1)** and **Apollo GraphOS (Organization 2)**.
 
-### Log in via IdP-generated link
+### Log in via an IdP-generated link
 
 Many IdPs provide a method to generate login links—sometimes called "magic links." These can be provided directly to team members or stored in an internal wiki or document for easy access. Login link creation often requires admin permissions in an IdP. Consult your IdP's documentation for instructions.
 
-### Log in via Apollo-generated link
+### Log in via an Apollo-generated link
 
-Apollo can also generate login links on request. Please get in touch with your Apollo contact to request a magic link. Be sure to include the organization(s) you want link(s) for.
+Apollo can also generate login links on request. Please get in touch with your Apollo contact to request a magic link. Be sure to include the organization(s) you want the link(s) for.
 
 ## Preview limitations
 
-While this feature is in [preview](/resources/product-launch-stages#preview), members can only log in with identity provider (IdP) initiated SSO.
-When in [GA](/resources/product-launch-stages#general-availability), it will also support service-provider (SP) initiated SSO.
+While this feature is in [preview](/resources/product-launch-stages#preview), members can only log in with IdP-initiated SSO.
+When in [GA](/resources/product-launch-stages#general-availability), it will also support service-provider-initiated (SP-initiated) SSO.
