--- a/src/content/graphos/org/sso/setup.mdx
+++ b/src/content/graphos/org/sso/setup.mdx
@@ -1,5 +1,5 @@
 ---
-title: SSO self-serve setup
+title: Self-serve SSO setup
 ---
 
 <PremiumFeature>
@@ -15,12 +15,12 @@ This feature is in invite-only [preview](/resources/product-launch-stages#previe
 
 </PreviewFeature>
 
-This guide walks through configuring SAML- or OIDC-based single sign-on (SSO) for an Apollo organization. These steps require:
+This guide walks through configuring SAML- or OIDC-based single sign-on (SSO) for an Apollo organization. Configuration requires:
 
 - Administrative access to your identity provider (IdP)
 - The [**Org admin** role](../members#organization-wide-member-roles) in GraphOS
 
-If you want to [multiple organizations](./multi-org) to share the same SSO configuration, repeat the steps for each organization.
+If you want to [multiple organizations to share the same SSO](./multi-org), repeat the configuration steps for each organization.
 
 ## Configuration
 
