Remove "self-serve" page

--- a/src/content/graphos/org/sso/multi-org.mdx
+++ b/src/content/graphos/org/sso/multi-org.mdx
@@ -20,7 +20,11 @@ Different GraphOS organizations can share the same identity provider (IdP) and S
 
 ## Prerequisites
 
-To share SSO configurations, organizations must first individually configure [self-serve SSO](./setup).
+To share SSO configurations, each organization needs to individually configure SSO according to the latest instructions (as of April 2024) for their particular IdP.
+
+- [Okta](./okta-integration-guide)
+- [Azure AD](./azure-ad-integration-guide)
+- [Generic SAML-based IdP](./saml-integration-guide)
 
 ## Switching between organizations
 
